add hero and mission sections

--- a/build-dev/index.html
+++ b/build-dev/index.html
@@ -16,19 +16,27 @@
 
 <body>
   <div class="site-wrap">
+    <header class="header js-header">
+      HEADER
+    </header>
 
 
     <main class="site-content">
+
+
       <div class="container" style="margin-bottom: 100px">
         <h1>Список страниц</h1>
 
         <ul>
+
           <li style="margin-bottom: 1rem">
             <a href="main.html">Главная</a>
           </li>
+
         </ul>
       </div>
     </main>
+
 
   </div>
 
