--- a/build-dev/main.html
+++ b/build-dev/main.html
@@ -16,10 +16,84 @@
 
 <body>
   <div class="site-wrap">
+    <header class="header js-header">
+      HEADER
+    </header>
 
 
     <main class="site-content">
+      <section class="hero section">
+        <div class="container">
+          <div class="splide js-slider" data-name="hero">
+            <div class="splide__track">
+              <ul class="splide__list hero__list">
+                <li class="splide__slide hero__item">
+                  <h2 class="hero__title">1Получите кэшбэк от стоимости банковской гарантии</h2>
+                  <div class="hero__bottom">
+                    <p class="hero__desc">При условии самостоятельного оформления через личный кабинет, на любой счет, указанный при регистрации</p>
+                    <a href="#" class="hero__order-btn btn">Получить</a>
+                  </div>
+                </li>
+                <li class="splide__slide hero__item">
+                  <h2 class="hero__title">2Получите кэшбэк от стоимости банковской гарантии</h2>
+                  <div class="hero__bottom">
+                    <p class="hero__desc">При условии самостоятельного оформления через личный кабинет, на любой счет, указанный при регистрации</p>
+                    <a href="#" class="hero__order-btn btn">Получить</a>
+                  </div>
+                </li>
+                <li class="splide__slide hero__item">
+                  <h2 class="hero__title">3Получите кэшбэк от стоимости банковской гарантии</h2>
+                  <div class="hero__bottom">
+                    <p class="hero__desc">При условии самостоятельного оформления через личный кабинет, на любой счет, указанный при регистрации</p>
+                    <a href="#" class="hero__order-btn btn">Получить</a>
+                  </div>
+                </li>
+                <li class="splide__slide hero__item">
+                  <h2 class="hero__title">4Получите кэшбэк от стоимости банковской гарантии</h2>
+                  <div class="hero__bottom">
+                    <p class="hero__desc">При условии самостоятельного оформления через личный кабинет, на любой счет, указанный при регистрации</p>
+                    <a href="#" class="hero__order-btn btn">Получить</a>
+                  </div>
+                </li>
+                <li class="splide__slide hero__item">
+                  <h2 class="hero__title">5Получите кэшбэк от стоимости банковской гарантии</h2>
+                  <div class="hero__bottom">
+                    <p class="hero__desc">При условии самостоятельного оформления через личный кабинет, на любой счет, указанный при регистрации</p>
+                    <a href="#" class="hero__order-btn btn">Получить</a>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="mission section">
+        <div class="container">
+          <div class="mission__inner">
+            <div class="mission__title-wrap">
+              <h3 class="mission__subtitle">О&nbsp;компании</h3>
+              <h2 class="misson__title title">Наша миссия</h2>
+            </div>
+            <ul class="mission__list">
+              <li class="mission__item" data-order="1">
+                <h3 class="mission__item-title">Цель</h3>
+                <p class="mission__item-desc">Создание закрытой экосистемы (комплекса взаимоотношений между заказчиками и&nbsp;исполнителями в&nbsp;защищенной сети обмена информацией) поддержки предприятий ОПК.</p>
+              </li>
+              <li class="mission__item" data-order="2">
+                <h3 class="mission__item-title">Задача</h3>
+                <p class="mission__item-desc">Формирование комплексного подхода к&nbsp;анализу, мониторингу и&nbsp;обеспечению информационной и&nbsp;финансовой поддержки участников отношений, в&nbsp;том числе в&nbsp;рамках исполнения государственного оборонного заказа (ГОЗ)</p>
+              </li>
+              <li class="mission__item" data-order="3">
+                <h3 class="mission__item-title">Реализация</h3>
+                <p class="mission__item-desc">Создание закрытой экосистемы сервисов для заказчиков услуг посредством использования защищенной сети АСТ ГОЗ и&nbsp;инструментов специализированной организации.</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
+
 
   </div>
 
