--- a/build-dev/main.html
+++ b/build-dev/main.html
@@ -22,6 +22,7 @@
 
 
     <main class="site-content">
+      <h1 class="visually-hidden">Центр поддержки предприятий ОПК</h1>
       <section class="hero section">
         <div class="container">
           <div class="splide js-slider" data-name="hero">
@@ -170,11 +171,65 @@
                 <li class="purchase-service__item">Организация и&nbsp;проведение закупки, заключение контракта</li>
               </ul>
             </div>
+            <div class="purchase-service__card _participant">
+              <h3 class="purchase-service__card-title">Участнику</h3>
+              <ul class="purchase-service__list">
+                <li class="purchase-service__item">Ускоренная регистрация на&nbsp;АСТ ГОЗ</li>
+                <li class="purchase-service__item">Поиск закупок, анализ документации</li>
+                <li class="purchase-service__item">Подготовка заявки</li>
+                <li class="purchase-service__item">Подача заявки</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="banner">
+        <div class="container">
+          <div class="banner__inner">
+            <h2 class="banner__title">Баннер с призывом к действию</h2>
+            <a href="#" class="banner__order-link btn">стать агентом</a>
           </div>
         </div>
       </section>
     </main>
 
+    <footer class="footer">
+      <div class="footer__top">
+        <div class="container">
+          <div class="footer__top-inner">
+            <div class="footer__section _logo">
+              <a href="/" class="footer__logo-link">
+                <svg class="footer__logo-img">
+                  <use xlink:href="assets/sprite.svg#logo"></use>
+                </svg>
+              </a>
+              <p class="footer__company-name">ООО &laquo;ЕСК&raquo;</p>
+            </div>
+            <div class="footer__section">
+              <h3 class="footer__section-title">Номер телефона</h3>
+              <a href="tel:88009999999" class="footer__section-content">8 800 999-99-99</a>
+            </div>
+            <div class="footer__section">
+              <h3 class="footer__section-title">Email</h3>
+              <a href="mailto:info@gozk.ru" target="_blank" class="footer__section-content">info@gozk.ru</a>
+            </div>
+            <div class="footer__section _address">
+              <h3 class="footer__section-title">Адрес</h3>
+              <p class="footer__section-content">620137, г. Екатеринбург, пер. Шоферов, д.&nbsp;5, оф.&nbsp;305</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer__bottom">
+        <div class="container">
+          <div class="footer__bottom-inner">
+            <p class="footer__bottom-text">&copy;2021&nbsp;ООО &laquo;ЕСК&raquo;. Все права защищены</p>
+            <a href="#" target="_blank" class="footer__bottom-text">Политика конфиденциальности</a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
   </div>
 
