add categories pages

--- a/build-dev/index.html
+++ b/build-dev/index.html
@@ -9,7 +9,8 @@
 
   <title>Список страниц</title>
 
-
+  <link rel="preload" href="./assets/fonts/Raleway/Raleway-Regular.woff2" as="font" crossorigin="anonymous" />
+  <link rel="preload" href="./assets/fonts/Raleway/Raleway-Medium.woff2" as="font" crossorigin="anonymous" />
 
   <link rel="stylesheet" href="./styles/main.css">
 </head>
@@ -20,19 +21,23 @@
       HEADER
     </header>
 
-
     <main class="site-content">
-
-
       <div class="container" style="margin-bottom: 100px">
         <h1>Список страниц</h1>
 
         <ul>
-
           <li style="margin-bottom: 1rem">
             <a href="main.html">Главная</a>
           </li>
-
+          <li style="margin-bottom: 1rem">
+            <a href="fin-products.html">Разводящая - Финансовые продукты</a>
+          </li>
+          <li style="margin-bottom: 1rem">
+            <a href="services-customer.html">Разводящая - Услуги заказчику</a>
+          </li>
+          <li style="margin-bottom: 1rem">
+            <a href="services-participant.html">Разводящая - Услуги участнику</a>
+          </li>
         </ul>
       </div>
     </main>
@@ -73,7 +78,6 @@
         </div>
       </div>
     </footer>
-
   </div>
 
   <script src="./js/main.js"></script>
