--- a/build-dev/main.html
+++ b/build-dev/main.html
@@ -9,7 +9,8 @@
 
   <title>Default title</title>
 
-
+  <link rel="preload" href="./assets/fonts/Raleway/Raleway-Regular.woff2" as="font" crossorigin="anonymous" />
+  <link rel="preload" href="./assets/fonts/Raleway/Raleway-Medium.woff2" as="font" crossorigin="anonymous" />
 
   <link rel="stylesheet" href="./styles/main.css">
 </head>
@@ -19,7 +20,6 @@
     <header class="header js-header">
       HEADER
     </header>
-
 
     <main class="site-content">
       <h1 class="visually-hidden">Центр поддержки предприятий ОПК</h1>
@@ -230,7 +230,6 @@
         </div>
       </div>
     </footer>
-
   </div>
 
   <script src="./js/main.js"></script>
