add about-content page

--- a/build-dev/index.html
+++ b/build-dev/index.html
@@ -21,6 +21,7 @@
       HEADER
     </header>
 
+
     <main class="site-content">
       <div class="container" style="margin-bottom: 100px">
         <h1>Список страниц</h1>
@@ -37,6 +38,9 @@
           </li>
           <li style="margin-bottom: 1rem">
             <a href="services-participant.html">Разводящая - Услуги участнику</a>
+          </li>
+          <li style="margin-bottom: 1rem">
+            <a href="about-content.html">О компании - контентная (миссия, банкам, агентам)</a>
           </li>
         </ul>
       </div>
@@ -78,6 +82,7 @@
         </div>
       </div>
     </footer>
+
   </div>
 
   <script src="./js/main.js"></script>
