--- a/build-dev/main.html
+++ b/build-dev/main.html
@@ -21,6 +21,7 @@
       HEADER
     </header>
 
+
     <main class="site-content">
       <h1 class="visually-hidden">Центр поддержки предприятий ОПК</h1>
       <section class="hero section">
@@ -192,6 +193,7 @@
           </div>
         </div>
       </section>
+
     </main>
 
     <footer class="footer">
@@ -199,11 +201,9 @@
         <div class="container">
           <div class="footer__top-inner">
             <div class="footer__section _logo">
-              <a href="/" class="footer__logo-link">
-                <svg class="footer__logo-img">
-                  <use xlink:href="assets/sprite.svg#logo"></use>
-                </svg>
-              </a>
+              <span class="footer__logo-link">
+            <svg class="footer__logo-img"><use xlink:href="assets/sprite.svg#logo"></use></svg>
+          </span>
               <p class="footer__company-name">ООО &laquo;ЕСК&raquo;</p>
             </div>
             <div class="footer__section">
@@ -230,6 +230,7 @@
         </div>
       </div>
     </footer>
+
   </div>
 
   <script src="./js/main.js"></script>
