--- a/build-dev/fin-products.html
+++ b/build-dev/fin-products.html
@@ -21,6 +21,7 @@
       HEADER
     </header>
 
+
     <main class="site-content">
       <section class="categories">
         <div class="categories__hero" style="
@@ -124,6 +125,16 @@
           </div>
         </div>
       </section>
+
+      <section class="banner">
+        <div class="container">
+          <div class="banner__inner">
+            <h2 class="banner__title">Баннер с призывом к действию</h2>
+            <a href="#" class="banner__order-link btn">стать агентом</a>
+          </div>
+        </div>
+      </section>
+
     </main>
 
     <footer class="footer">
@@ -162,6 +173,7 @@
         </div>
       </div>
     </footer>
+
   </div>
 
   <script src="./js/main.js"></script>
