--- a/build-dev/index.html
+++ b/build-dev/index.html
@@ -42,6 +42,9 @@
           <li style="margin-bottom: 1rem">
             <a href="about-content.html">О компании - контентная (миссия, банкам, агентам)</a>
           </li>
+          <li style="margin-bottom: 1rem">
+            <a href="docs.html">Документы</a>
+          </li>
         </ul>
       </div>
     </main>
