--- a/build-dev/main.html
+++ b/build-dev/main.html
@@ -24,6 +24,7 @@
 
     <main class="site-content">
       <h1 class="visually-hidden">Центр поддержки предприятий ОПК</h1>
+
       <section class="hero section">
         <div class="container">
           <div class="splide js-slider" data-name="hero">
@@ -161,7 +162,15 @@
 
       <section class="purchase-service">
         <div class="container">
-          <h2 class="purchase-service__title title">Услуги в&nbsp;сфере закупок</h2>
+          <div class="purchase-service__title-wrap">
+            <h2 class="purchase-service__title title">Услуги в&nbsp;сфере закупок</h2>
+            <a href="#" class="purchase-service__section-link">
+              <span>Перейти в раздел</span>
+              <svg>
+                <use xlink:href="assets/sprite.svg#arrow-right"></use>
+              </svg>
+            </a>
+          </div>
           <div class="purchase-service__wrap">
             <div class="purchase-service__card _customer">
               <h3 class="purchase-service__card-title">Заказчику</h3>
