--- a/build-dev/fin-products.html
+++ b/build-dev/fin-products.html
@@ -13,6 +13,7 @@
   <link rel="preload" href="./assets/fonts/Raleway/Raleway-Medium.woff2" as="font" crossorigin="anonymous" />
 
   <link rel="stylesheet" href="./styles/main.css">
+
 </head>
 
 <body>
@@ -20,7 +21,6 @@
     <header class="header js-header">
       HEADER
     </header>
-
 
     <main class="site-content">
       <section class="categories">
@@ -43,84 +43,102 @@
                 </li>
               </ul>
             </div>
+
             <h1 class="categories__title title">Финансовые продукты</h1>
           </div>
         </div>
         <div class="categories__list-wrap">
           <div class="container">
             <ul class="categories__list">
+
               <li class="categories__item">
                 <a href="#" class="categories__item-link">
                   <h3 class="categories__item-title">Рассчетно-кассовое обслуживания</h3>
 
+
                   <p class="categories__item-desc">отдельные банковские счета</p>
+
 
                   <svg class="categories__item-arrow">
                     <use xlink:href="assets/sprite.svg#arrow-right"></use>
                   </svg>
                 </a>
               </li>
+
               <li class="categories__item">
                 <a href="#" class="categories__item-link">
                   <h3 class="categories__item-title">Кредитование</h3>
 
 
+
                   <svg class="categories__item-arrow">
                     <use xlink:href="assets/sprite.svg#arrow-right"></use>
                   </svg>
                 </a>
               </li>
+
               <li class="categories__item">
                 <a href="#" class="categories__item-link">
                   <h3 class="categories__item-title">Факторинг</h3>
 
 
+
                   <svg class="categories__item-arrow">
                     <use xlink:href="assets/sprite.svg#arrow-right"></use>
                   </svg>
                 </a>
               </li>
+
               <li class="categories__item">
                 <a href="#" class="categories__item-link">
                   <h3 class="categories__item-title">Финансирование <br> контрактов</h3>
 
 
+
                   <svg class="categories__item-arrow">
                     <use xlink:href="assets/sprite.svg#arrow-right"></use>
                   </svg>
                 </a>
               </li>
+
               <li class="categories__item">
                 <a href="#" class="categories__item-link">
                   <h3 class="categories__item-title">Банковские <br> гарантии</h3>
 
 
+
                   <svg class="categories__item-arrow">
                     <use xlink:href="assets/sprite.svg#arrow-right"></use>
                   </svg>
                 </a>
               </li>
+
               <li class="categories__item">
                 <a href="#" class="categories__item-link">
                   <h3 class="categories__item-title">Зарплатные <br> проекты</h3>
 
 
+
                   <svg class="categories__item-arrow">
                     <use xlink:href="assets/sprite.svg#arrow-right"></use>
                   </svg>
                 </a>
               </li>
+
               <li class="categories__item">
                 <a href="#" class="categories__item-link">
                   <h3 class="categories__item-title">Бухгалтерский учет <br> по&nbsp;контрактам в ГОЗ</h3>
 
+
                   <p class="categories__item-desc">раздельный учет</p>
+
 
                   <svg class="categories__item-arrow">
                     <use xlink:href="assets/sprite.svg#arrow-right"></use>
                   </svg>
                 </a>
               </li>
+
             </ul>
           </div>
         </div>
@@ -174,6 +192,16 @@
       </div>
     </footer>
 
+    <div class="popup js-popup" id="error-popup">
+      <button class="popup__close-btn js-close-popup" type="button">
+        <svg>
+          <use xlink:href="assets/sprite.svg#close"></use>
+        </svg>
+      </button>
+      <div class="popup__inner">
+        <h3 class="title popup__title _centered">Что-то пошло не так.</h3>
+      </div>
+    </div>
   </div>
 
   <script src="./js/main.js"></script>
