--- a/build-dev/about-content.html
+++ b/build-dev/about-content.html
@@ -13,6 +13,7 @@
   <link rel="preload" href="./assets/fonts/Raleway/Raleway-Medium.woff2" as="font" crossorigin="anonymous" />
 
   <link rel="stylesheet" href="./styles/main.css">
+
 </head>
 
 <body>
@@ -20,7 +21,6 @@
     <header class="header js-header">
       HEADER
     </header>
-
 
     <main class="site-content">
       <section class="about-content">
@@ -44,6 +44,7 @@
                   </li>
                 </ul>
               </div>
+
               <h1 class="about-content__title">Банкам</h1>
             </div>
           </div>
@@ -72,6 +73,7 @@
           </div>
         </div>
       </section>
+
 
     </main>
 
@@ -112,6 +114,16 @@
       </div>
     </footer>
 
+    <div class="popup js-popup" id="error-popup">
+      <button class="popup__close-btn js-close-popup" type="button">
+        <svg>
+          <use xlink:href="assets/sprite.svg#close"></use>
+        </svg>
+      </button>
+      <div class="popup__inner">
+        <h3 class="title popup__title _centered">Что-то пошло не так.</h3>
+      </div>
+    </div>
   </div>
 
   <script src="./js/main.js"></script>
