--- a/build-dev/main.html
+++ b/build-dev/main.html
@@ -13,6 +13,7 @@
   <link rel="preload" href="./assets/fonts/Raleway/Raleway-Medium.woff2" as="font" crossorigin="anonymous" />
 
   <link rel="stylesheet" href="./styles/main.css">
+
 </head>
 
 <body>
@@ -20,7 +21,6 @@
     <header class="header js-header">
       HEADER
     </header>
-
 
     <main class="site-content">
       <h1 class="visually-hidden">Центр поддержки предприятий ОПК</h1>
@@ -30,6 +30,7 @@
           <div class="splide js-slider" data-name="hero">
             <div class="splide__track">
               <ul class="splide__list hero__list">
+
                 <li class="splide__slide hero__item">
                   <h2 class="hero__title">1Получите кэшбэк от стоимости банковской гарантии</h2>
                   <div class="hero__bottom">
@@ -37,6 +38,7 @@
                     <a href="#" class="hero__order-btn btn">Получить</a>
                   </div>
                 </li>
+
                 <li class="splide__slide hero__item">
                   <h2 class="hero__title">2Получите кэшбэк от стоимости банковской гарантии</h2>
                   <div class="hero__bottom">
@@ -44,6 +46,7 @@
                     <a href="#" class="hero__order-btn btn">Получить</a>
                   </div>
                 </li>
+
                 <li class="splide__slide hero__item">
                   <h2 class="hero__title">3Получите кэшбэк от стоимости банковской гарантии</h2>
                   <div class="hero__bottom">
@@ -51,6 +54,7 @@
                     <a href="#" class="hero__order-btn btn">Получить</a>
                   </div>
                 </li>
+
                 <li class="splide__slide hero__item">
                   <h2 class="hero__title">4Получите кэшбэк от стоимости банковской гарантии</h2>
                   <div class="hero__bottom">
@@ -58,6 +62,7 @@
                     <a href="#" class="hero__order-btn btn">Получить</a>
                   </div>
                 </li>
+
                 <li class="splide__slide hero__item">
                   <h2 class="hero__title">5Получите кэшбэк от стоимости банковской гарантии</h2>
                   <div class="hero__bottom">
@@ -65,6 +70,7 @@
                     <a href="#" class="hero__order-btn btn">Получить</a>
                   </div>
                 </li>
+
               </ul>
             </div>
           </div>
@@ -79,18 +85,23 @@
               <h2 class="misson__title title">Наша миссия</h2>
             </div>
             <ul class="mission__list">
+
+
               <li class="mission__item" data-order="1">
                 <h3 class="mission__item-title">Цель</h3>
                 <p class="mission__item-desc">Создание закрытой экосистемы (комплекса взаимоотношений между заказчиками и&nbsp;исполнителями в&nbsp;защищенной сети обмена информацией) поддержки предприятий ОПК.</p>
               </li>
+
               <li class="mission__item" data-order="2">
                 <h3 class="mission__item-title">Задача</h3>
                 <p class="mission__item-desc">Формирование комплексного подхода к&nbsp;анализу, мониторингу и&nbsp;обеспечению информационной и&nbsp;финансовой поддержки участников отношений, в&nbsp;том числе в&nbsp;рамках исполнения государственного оборонного заказа (ГОЗ)</p>
               </li>
+
               <li class="mission__item" data-order="3">
                 <h3 class="mission__item-title">Реализация</h3>
                 <p class="mission__item-desc">Создание закрытой экосистемы сервисов для заказчиков услуг посредством использования защищенной сети АСТ ГОЗ и&nbsp;инструментов специализированной организации.</p>
               </li>
+
             </ul>
           </div>
         </div>
@@ -102,6 +113,8 @@
           <ul class="fin-products__list">
 
 
+
+
             <li class="fin-products__item">
               <a href="#" class="fin-products__item-link">
                 <h3 class="fin-products__item-title">Банковские гарантии</h3>
@@ -111,6 +124,7 @@
                 </svg>
               </a>
             </li>
+
             <li class="fin-products__item">
               <a href="#" class="fin-products__item-link">
                 <h3 class="fin-products__item-title">Рассчетно-кассовое обслуживания</h3>
@@ -120,6 +134,7 @@
                 </svg>
               </a>
             </li>
+
             <li class="fin-products__item">
               <a href="#" class="fin-products__item-link">
                 <h3 class="fin-products__item-title">Кредитование</h3>
@@ -129,6 +144,7 @@
                 </svg>
               </a>
             </li>
+
             <li class="fin-products__item">
               <a href="#" class="fin-products__item-link">
                 <h3 class="fin-products__item-title">Факторинг</h3>
@@ -138,6 +154,7 @@
                 </svg>
               </a>
             </li>
+
             <li class="fin-products__item">
               <a href="#" class="fin-products__item-link">
                 <h3 class="fin-products__item-title">Финансирование контрактов</h3>
@@ -147,6 +164,7 @@
                 </svg>
               </a>
             </li>
+
             <li class="fin-products__item">
               <a href="#" class="fin-products__item-link">
                 <h3 class="fin-products__item-title">Зарплатные проекты</h3>
@@ -156,6 +174,7 @@
                 </svg>
               </a>
             </li>
+
           </ul>
         </div>
       </section>
@@ -194,6 +213,7 @@
         </div>
       </section>
 
+
       <section class="banner">
         <div class="container">
           <div class="banner__inner">
@@ -202,6 +222,7 @@
           </div>
         </div>
       </section>
+
 
     </main>
 
@@ -240,6 +261,16 @@
       </div>
     </footer>
 
+    <div class="popup js-popup" id="error-popup">
+      <button class="popup__close-btn js-close-popup" type="button">
+        <svg>
+          <use xlink:href="assets/sprite.svg#close"></use>
+        </svg>
+      </button>
+      <div class="popup__inner">
+        <h3 class="title popup__title _centered">Что-то пошло не так.</h3>
+      </div>
+    </div>
   </div>
 
   <script src="./js/main.js"></script>
