--- a/build-dev/fin-products-detail.html
+++ b/build-dev/fin-products-detail.html
@@ -23,10 +23,10 @@
     </header>
 
     <main class="site-content">
-      <section class="gallery">
+      <section class="fin-detail">
         <div class="detail-hero" style="
-    --hero-img-mobile: url('../assets/img/hero-bg/gallery.jpg');
-    --hero-img-desktop: url('../assets/img/hero-bg/gallery.jpg');
+    --hero-img-mobile: url('../assets/img/hero-bg/fin-products.jpg');
+    --hero-img-desktop: url('../assets/img/hero-bg/fin-products.jpg');
   ">
           <div class="container">
             <div class="breadcrumbs">
@@ -44,58 +44,68 @@
               </ul>
             </div>
 
-            <h1 class="detail-hero__title">Фотографии</h1>
+            <h1 class="detail-hero__title">Банковские гарантии</h1>
 
 
+            <a href="#" class="detail-hero__order-btn btn js-open-popup" data-popup-id="order-popup">Оставить заявку</a>
           </div>
         </div>
 
-
         <div class="container">
-          <ul class="gallery__list">
-            <li class="gallery__item">
-              <a href="#" class="gallery__item-link">
-                <img src="assets/img/gallery/1.jpg" alt="" class="gallery__item-img">
-                <h3 class="gallery__item-title">Название альбома</h3>
-                <p class="gallery__item-date">23.09.2021</p>
-                <svg class="gallery__item-arrow">
-                  <use xlink:href="assets/sprite.svg#arrow-right"></use>
-                </svg>
-              </a>
+
+          <ul class="fin-detail__list">
+
+            <li class="fin-detail__item">
+              <h3 class="fin-detail__item-title">Предодобренные решения</h3>
+
+
             </li>
-            <li class="gallery__item">
-              <a href="#" class="gallery__item-link">
-                <img src="assets/img/gallery/2.jpg" alt="" class="gallery__item-img">
-                <h3 class="gallery__item-title">Название альбома</h3>
-                <p class="gallery__item-date">23.09.2021</p>
-                <svg class="gallery__item-arrow">
-                  <use xlink:href="assets/sprite.svg#arrow-right"></use>
-                </svg>
-              </a>
+            <li class="fin-detail__item">
+              <h3 class="fin-detail__item-title">Срок рассмотрения заявки до 30 минут</h3>
+
+
             </li>
-            <li class="gallery__item">
-              <a href="#" class="gallery__item-link">
-                <img src="assets/img/gallery/3.jpg" alt="" class="gallery__item-img">
-                <h3 class="gallery__item-title">Название альбома</h3>
-                <p class="gallery__item-date">23.09.2021</p>
-                <svg class="gallery__item-arrow">
-                  <use xlink:href="assets/sprite.svg#arrow-right"></use>
-                </svg>
-              </a>
+            <li class="fin-detail__item">
+              <h3 class="fin-detail__item-title">Диапазон процентных ставок 1,8-4,5 % годовых</h3>
+
+              <p class="fin-detail__item-desc">Ориентировочный диапазон, решение принимается индивидуально в&nbsp;зависимости от&nbsp;оценки финансового состояния заемщика</p>
+
             </li>
-            <li class="gallery__item">
-              <a href="#" class="gallery__item-link">
-                <img src="assets/img/gallery/4.jpg" alt="" class="gallery__item-img">
-                <h3 class="gallery__item-title">Название альбома</h3>
-                <p class="gallery__item-date">23.09.2021</p>
-                <svg class="gallery__item-arrow">
-                  <use xlink:href="assets/sprite.svg#arrow-right"></use>
-                </svg>
-              </a>
+            <li class="fin-detail__item">
+              <h3 class="fin-detail__item-title">Электронный документооборот</h3>
+
+              <p class="fin-detail__item-desc">Оформление без посещения Клиентом офиса</p>
+
+            </li>
+            <li class="fin-detail__item">
+              <h3 class="fin-detail__item-title">Рассмотрение без отчетности гарантий суммой до&nbsp;10&nbsp;млн. руб.</h3>
+
+
+            </li>
+            <li class="fin-detail__item">
+              <h3 class="fin-detail__item-title">Максимальный лимит 150&nbsp;млн. руб. без залога</h3>
+
+
             </li>
           </ul>
-        </div>
 
+          <div class="section-nav">
+            <a href="#" class="section-nav__link _prev">
+              <p class="section-nav__text">Предыдущий продукт</p>
+              <p class="section-nav__name">Рассчетно-кассовое обслуживания (отдельные банковские счета)</p>
+              <svg class="section-nav__arrow">
+                <use xlink:href="assets/sprite.svg#arrow-left"></use>
+              </svg>
+            </a>
+            <a href="#" class="section-nav__link _next">
+              <p class="section-nav__text">Следующий продукт</p>
+              <p class="section-nav__name">Кредитование</p>
+              <svg class="section-nav__arrow">
+                <use xlink:href="assets/sprite.svg#arrow-right"></use>
+              </svg>
+            </a>
+          </div>
+        </div>
       </section>
 
     </main>
