--- a/build-dev/index.html
+++ b/build-dev/index.html
@@ -54,6 +54,18 @@
           <li style="margin-bottom: 1rem">
             <a href="contacts.html">Контакты</a>
           </li>
+          <li style="margin-bottom: 1rem">
+            <a href="fin-products-detail.html">Финансовые продукты - детальная</a>
+          </li>
+          <li style="margin-bottom: 1rem">
+            <a href="services-customer-detail.html">Услуги заказчику - детальная</a>
+          </li>
+          <li style="margin-bottom: 1rem">
+            <a href="services-participant-detail.html">Услуги участнику - детальная</a>
+          </li>
+          <li style="margin-bottom: 1rem">
+            <a href="privacy-policy.html">Политика конфиденциальности</a>
+          </li>
         </ul>
       </div>
     </main>
