--- a/build-dev/services-customer-detail.html
+++ b/build-dev/services-customer-detail.html
@@ -23,10 +23,10 @@
     </header>
 
     <main class="site-content">
-      <section class="gallery">
-        <div class="detail-hero" style="
-    --hero-img-mobile: url('../assets/img/hero-bg/gallery.jpg');
-    --hero-img-desktop: url('../assets/img/hero-bg/gallery.jpg');
+      <section class="services-detail">
+        <div class="detail-hero _hight" style="
+    --hero-img-mobile: url('../assets/img/hero-bg/customer.jpg');
+    --hero-img-desktop: url('../assets/img/hero-bg/customer.jpg');
   ">
           <div class="container">
             <div class="breadcrumbs">
@@ -44,58 +44,43 @@
               </ul>
             </div>
 
-            <h1 class="detail-hero__title">Фотографии</h1>
+            <h1 class="detail-hero__title">Расчет и обоснование НМЦ</h1>
 
+            <p class="detail-hero__text">Краткий текст описание раздела. Напомним, что наличие банковской гарантии позволит бенефициару застраховать себя от неблагоприятного случая.</p>
 
+            <a href="#" class="detail-hero__order-btn btn js-open-popup" data-popup-id="order-popup">Оставить заявку</a>
           </div>
         </div>
 
-
         <div class="container">
-          <ul class="gallery__list">
-            <li class="gallery__item">
-              <a href="#" class="gallery__item-link">
-                <img src="assets/img/gallery/1.jpg" alt="" class="gallery__item-img">
-                <h3 class="gallery__item-title">Название альбома</h3>
-                <p class="gallery__item-date">23.09.2021</p>
-                <svg class="gallery__item-arrow">
-                  <use xlink:href="assets/sprite.svg#arrow-right"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="gallery__item">
-              <a href="#" class="gallery__item-link">
-                <img src="assets/img/gallery/2.jpg" alt="" class="gallery__item-img">
-                <h3 class="gallery__item-title">Название альбома</h3>
-                <p class="gallery__item-date">23.09.2021</p>
-                <svg class="gallery__item-arrow">
-                  <use xlink:href="assets/sprite.svg#arrow-right"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="gallery__item">
-              <a href="#" class="gallery__item-link">
-                <img src="assets/img/gallery/3.jpg" alt="" class="gallery__item-img">
-                <h3 class="gallery__item-title">Название альбома</h3>
-                <p class="gallery__item-date">23.09.2021</p>
-                <svg class="gallery__item-arrow">
-                  <use xlink:href="assets/sprite.svg#arrow-right"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="gallery__item">
-              <a href="#" class="gallery__item-link">
-                <img src="assets/img/gallery/4.jpg" alt="" class="gallery__item-img">
-                <h3 class="gallery__item-title">Название альбома</h3>
-                <p class="gallery__item-date">23.09.2021</p>
-                <svg class="gallery__item-arrow">
-                  <use xlink:href="assets/sprite.svg#arrow-right"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          <div class="content _services">
+            <h3>Расчет и обоснование начальной максимальной цены в строгом соответствии со ст. 22 44-ФЗ в соответствии со следующими методами:</h3>
+            <ul>
+              <li>- метод сопоставимых рыночных цен и анализ рынка;</li>
+              <li>- тарифный метод;</li>
+              <li>- проектно-сметный метод;</li>
+              <li>- нормативный метод;</li>
+              <li>- затратный метод.</li>
+            </ul>
+            <p>По государственному оборонному заказу поможем рассчитать цену в соответствии с Постановлением Правительства РФ от 02.12.2017 № 1465.</p>
+          </div>
+          <div class="section-nav">
+            <a href="#" class="section-nav__link _prev">
+              <p class="section-nav__text">Предыдущий продукт</p>
+              <p class="section-nav__name">Рассчетно-кассовое обслуживания (отдельные банковские счета)</p>
+              <svg class="section-nav__arrow">
+                <use xlink:href="assets/sprite.svg#arrow-left"></use>
+              </svg>
+            </a>
+            <a href="#" class="section-nav__link _next">
+              <p class="section-nav__text">Следующий продукт</p>
+              <p class="section-nav__name">Кредитование</p>
+              <svg class="section-nav__arrow">
+                <use xlink:href="assets/sprite.svg#arrow-right"></use>
+              </svg>
+            </a>
+          </div>
         </div>
-
       </section>
 
     </main>
